--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                             <div class="row">
                                 <div class="about-text">
                                     <h3><span></span></h3>
-                                    <p>Hi! I'm Isha, a BCA student at Poornima University with a strong interest in web development. I enjoy building responsive and user-friendly websites using HTML, CSS, JavaScript, and React.
+                                    <p>Hi! I'm Isha, a BCA student at Poornima University with a strong interest in web development. I enjoy building responsive and user-friendly websites using HTML, CSS, JavaScript, and PHP.
 
                                         I'm passionate about learning new technologies, solving problems through code, and continuously improving my skills. I'm currently working on personal projects to strengthen my frontend development abilities and gain real-world experience.</p>
                                 </div>
